added inline update and delete of registration in profile page

--- a/public/profile.html
+++ b/public/profile.html
@@ -105,26 +105,17 @@
 								<th>Time</th>
 								<th>Role</th>
 								<th>Team Name</th>
+								<th>Comment</th>
 								<th>Price</th>
 								<th>Paid</th>
 								<th>Debt</th>
 								<th>Attended</th>
+								<th></th>
+								<th></th>
 							</tr>
 						</thead>
 						<tbody>
-							<tr ng-repeat="x in user.tournaments" ng-click="openDetails(x)" style="cursor: pointer">
-								<td>{{x.name}}</td>
-								<td>{{x.ort}}</td>
-								<td>{{x.startdate | date:'dd.MM.yyyy'}}<br>{{x.enddate | date:'dd.MM.yyyy'}}</td>
-								<td>{{x.pivot_role}}</td>
-								<td>{{x.pivot_teamname}}</td>
-								<td>{{x.pivot_price_owed}}€</td>
-								<td>{{x.pivot_price_paid}}€</td>
-								<td ng-show="(x.pivot_price_paid - x.pivot_price_owed) < 0" style="color: #ff3533">{{x.pivot_price_paid - x.pivot_price_owed}}€</td>
-								<td ng-hide="(x.pivot_price_paid - x.pivot_price_owed) < 0">{{x.pivot_price_paid - x.pivot_price_owed}}€</td>
-								<td ng-hide="x.pivot_attended == 1" class="text-center"><span class="glyphicon glyphicon-remove"></span></td>
-								<td ng-show="x.pivot_attended == 1" class="text-center"><span class="glyphicon glyphicon-ok"></span></td>
-							</tr>
+							<tr ng-repeat="x in user.tournaments" ng-include="getTemplate(x)"></tr>
 							<tr style="border-top: solid 2px black;">
 								<td></td>
 								<td></td>
@@ -137,6 +128,7 @@
 								<td ng-hide="debt < 0" style="color: #2ab269">{{debt}}€</td>
 								<td></td>
 								<td></td>
+								<td></td>
 							</tr>
 						</tbody>
 					</table>
@@ -145,3 +137,50 @@
 		</div>
 	</div>
 </section>
+
+<script type="text/ng-template" id="display">
+	<td ng-click="openDetails(x)" style="text-align: left">{{x.name}}</td>
+	<td ng-click="openDetails(x)">{{x.ort}}</td>
+	<td ng-click="openDetails(x)">{{x.startdate | date:'dd.MM.yyyy'}}<br>{{x.enddate | date:'dd.MM.yyyy'}}</td>
+	<td ng-click="openDetails(x)">{{x.pivot_role}}</td>
+	<td ng-click="openDetails(x)">{{x.pivot_teamname}}</td>
+	<td ng-click="openDetails(x)">{{x.pivot_comment}}</td>
+	<td ng-click="openDetails(x)">{{x.pivot_price_owed}}€</td>
+	<td ng-click="openDetails(x)">{{x.pivot_price_paid}}€</td>
+	<td ng-click="openDetails(x)" ng-show="(x.pivot_price_paid - x.pivot_price_owed) < 0" style="color: #ff3533">{{x.pivot_price_paid - x.pivot_price_owed}}€</td>
+	<td ng-click="openDetails(x)" ng-hide="(x.pivot_price_paid - x.pivot_price_owed) < 0">{{x.pivot_price_paid - x.pivot_price_owed}}€</td>
+	<td ng-click="openDetails(x)" ng-hide="x.pivot_attended == 1" class="text-center"><span class="glyphicon glyphicon-remove"></span></td>
+	<td ng-click="openDetails(x)" ng-show="x.pivot_attended == 1" class="text-center"><span class="glyphicon glyphicon-ok"></span></td>
+	<td ng-hide="x.pivot_attended == 1" class="text-center">
+		<button ng-click="editContact(x)" class="btn btn-info"><span class="glyphicon glyphicon-pencil"></span></button>
+	</td>
+	<td ng-hide="x.pivot_attended == 1" class="text-center">
+		<button ng-click="unreg(x.id)" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span></button>
+	</td>
+</script>
+<script type="text/ng-template" id="edit">
+	<td ng-click="openDetails(x)" style="text-align: left">{{x.name}}</td>
+	<td ng-click="openDetails(x)">{{x.ort}}</td>
+	<td ng-click="openDetails(x)">{{x.startdate | date:'dd.MM.yyyy'}}<br>{{x.enddate | date:'dd.MM.yyyy'}}</td>
+	<td>
+		<select class="form-control" style="height:auto" ng-options="role as role.label for role in roles track by role.id" ng-model="selected.pivot_role">
+		</select>
+	</td>
+	<td ng-show="selected.pivot_role.value == 'speaker'">
+		<input class="form-control" type="text" ng-model="selected.pivot_teamname" />
+	</td>
+	<td ng-hide="selected.pivot_role.value == 'speaker'">
+		<input disabled class="form-control" type="text" />
+	</td>
+	<td><textarea rows="3" placeholder="You can leave a comment here." ng-model="selected.pivot_comment" class="form-control"></textarea></td>
+	<td ng-click="openDetails(x)">{{x.pivot_price_owed}}€</td>
+	<td ng-click="openDetails(x)">{{x.pivot_price_paid}}€</td>
+	<td ng-click="openDetails(x)" ng-show="(x.pivot_price_paid - x.pivot_price_owed) < 0" style="color: #ff3533">{{x.pivot_price_paid - x.pivot_price_owed}}€</td>
+	<td ng-click="openDetails(x)" ng-hide="(x.pivot_price_paid - x.pivot_price_owed) < 0">{{x.pivot_price_paid - x.pivot_price_owed}}€</td>
+	<td ng-click="openDetails(x)" ng-hide="x.pivot_attended == 1" class="text-center"><span class="glyphicon glyphicon-remove"></span></td>
+	<td ng-click="openDetails(x)" ng-show="x.pivot_attended == 1" class="text-center"><span class="glyphicon glyphicon-ok"></span></td>
+	<td>
+		<button class="btn btn-sm btn-success" ng-click="saveReg($index, x.pivot_id)" style="margin: 3px">Save</button>
+		<button class="btn btn-sm btn-danger" ng-click="reset()" style="margin: 3px">Cancel</button>
+	</td>
+</script>
