--- a/public/bugReport.html
+++ b/public/bugReport.html
@@ -41,7 +41,9 @@
             </form>
 
         </div>
+    </div>
 
+    <div class="container">
         <div ng-show="istVorstand" class="col-md-12" style="margin-top: 50px">
             <table class="table table-hover table-responsive">
                 <thead>
