--- a/public/tournaments.html
+++ b/public/tournaments.html
@@ -12,8 +12,9 @@
 
 <!-- NORMAL VIEW -->
 <section id="tournaments" class="user-info" ng-hide="showUpdate">
+	<div class="container">
 	<div class="row">
-		<div class="col-sm-10 col-sm-offset-1">
+		<div class="col-md-12">
 			<!-- Table -->
 			<div class="col-md-7">
 
@@ -47,7 +48,7 @@
 
 			<!-- Details -->
 			<div id="details" class="col-md-5 wellpadding">
-				<table ng-show="showDetails" class="table table-hover details">
+				<table ng-show="showDetails" class="table table-hover details table-responsive">
 					<tr>
 						<th><h4><span class="fa fa-book"></span> Details</h4><br></th>
 						<td>
@@ -121,6 +122,7 @@
 			</div>
 
 		</div>
+	</div>
 	</div>
 </section>
 
