--- a/public/finances.html
+++ b/public/finances.html
@@ -38,6 +38,12 @@
                     <td>{{user.tournaments.length}}</td>
                     <td>{{personnelDebt}}€</td>
                 </tr>
+                <tr style="font-weight: bold;">
+                    <td class="hidden-xs">#</td>
+                    <td>{{users.length}}</td>
+                    <td></td>
+                    <td></td>
+                </tr>
                 </tbody>
             </table>
         </div>
