--- a/public/finances.html
+++ b/public/finances.html
@@ -28,7 +28,12 @@
                         <button class="btn btn-raised btn-info btn-sm" ng-click="sortUsers('vorname')">Name</button>
                     </th>
                     <th>Tournaments</th>
-                    <th>Debt</th>
+                    <th>
+                        <button class="btn btn-raised btn-info btn-sm" ng-click="sortUsers('totalDebt')">Debt</button>
+                    </th>
+                    <th>
+                        <button class="btn btn-raised btn-info btn-sm" ng-click="sortUsers('totalPoints')">Points</button>
+                    </th>
                 </tr>
                 </thead>
                 <tbody class="left-align">
@@ -36,7 +41,8 @@
                     <td class="hidden-xs">{{user.id}}</a></td>
                     <td>{{user.vorname}} {{user.name}}</a></td>
                     <td>{{user.tournaments.length}}</td>
-                    <td>{{personnelDebt}}€</td>
+                    <td>{{user.totalDebt}}€</td>
+                    <td>{{user.totalPoints}}</td>
                 </tr>
                 <tr style="font-weight: bold;">
                     <td class="hidden-xs">#</td>
