--- a/public/profileTournamentDialog.html
+++ b/public/profileTournamentDialog.html
@@ -27,7 +27,7 @@
             </tr>
             <tr>
                 <th>price:</th>
-                <td>Speaker: {{tournament.speakerprice}} €<br>Judge: {{tournament.judgeprice}} €</td>
+                <td>Speaker: {{tournament.speakerprice | currency:"€"}}<br>Judge: {{tournament.judgeprice | currency:"€"}}</td>
             </tr>
             <tr>
                 <th>language:</th>
