--- a/public/tournaments.html
+++ b/public/tournaments.html
@@ -90,11 +90,11 @@
 					</tr>
 					<tr>
 						<th>Price Speaker:</th>
-						<td>{{tournament.speakerprice}}</td>
+						<td>{{tournament.speakerprice | currency:"€"}}</td>
 					</tr>
 					<tr>
 						<th>Price Judge:</th>
-						<td>{{tournament.judgeprice}}</td>
+						<td>{{tournament.judgeprice | currency:"€"}}</td>
 					</tr>
 					<tr>
 						<th>Deadline to signup:</th>
