--- a/public/finances.html
+++ b/public/finances.html
@@ -41,7 +41,7 @@
                     <td class="hidden-xs">{{user.id}}</a></td>
                     <td>{{user.vorname}} {{user.name}}</a></td>
                     <td>{{user.tournaments.length}}</td>
-                    <td>{{user.totalDebt}}€</td>
+                    <td>{{user.totalDebt | currency:"€"}}</td>
                     <td>{{user.totalPoints}}</td>
                 </tr>
                 <tr style="font-weight: bold;">
@@ -55,6 +55,7 @@
         </div>
     </div>
 
+
     <!-- TOURNAMENT TABLE -->
     <div id="tournaments" class="row">
         <div ng-show="showTournaments" class="col-md-12">
@@ -67,24 +68,13 @@
                     <th><button class="btn btn-raised btn-info btn-sm" ng-click="sortTournaments('name')">Name</button></th>
                     <th><button class="btn btn-raised btn-info btn-sm" ng-click="sortTournaments('startdate')">Date</button></th>
                     <th><button class="btn btn-raised btn-info btn-sm" ng-click="sortTournaments('pivot_role')">Role</button></th>
-                    <th class="hidden-xs"><button class="btn btn-raised btn-info btn-sm" ng-click="sortTournaments('pivot_price_paid')">Price Paid</button></th>
-                    <th class="hidden-xs hidden-sm col-md-1"><button class="btn btn-raised btn-info btn-sm" ng-click="sortTournaments('pivot_price_owed')">Price Owed</button></th>
-                    <th class="hidden-xs">Debt</th>
+                    <th class="col-md-1"><button class="btn btn-raised btn-info btn-sm" ng-click="sortTournaments('pivot_price_paid')">Price Paid</button></th>
+                    <th class="col-md-1"><button class="btn btn-raised btn-info btn-sm" ng-click="sortTournaments('pivot_price_owed')">Price Owed</button></th>
+                    <th>Debt</th>
                 </tr>
                 </thead>
                 <tbody class="left-align">
-                <tr ng-repeat="tournament in user.tournaments">
-                    <td class="text-center hidden-xs">{{tournament.id}}</td>
-                    <td>
-                        {{tournament.name}}
-                    </td>
-                    <td>{{tournament.startdate | date: 'dd.MM.yyyy'}}</td>
-                    <td>{{tournament.pivot_role}}</td>
-                    <td class="hidden-xs">{{tournament.pivot_price_paid}}€</td>
-                    <td class="hidden-xs hidden-sm">{{tournament.pivot_price_owed}}€</td>
-                    <td>{{tournament.pivot_price_paid - tournament.pivot_price_owed}}€</td>
-
-                </tr>
+                    <tr ng-repeat="tournament in user.tournaments" ng-include="getTemplate(tournament)"></tr>
                 </tbody>
             </table>
         </div>
@@ -92,3 +82,46 @@
 
     </div>
 </section>
+
+
+<!--TEMPLATE FOR NORMAL VIEW-->
+<script type="text/ng-template" id="display">
+
+    <td class="text-center hidden-xs">{{tournament.id}}</td>
+    <td>
+        {{tournament.name}}
+    </td>
+    <td>{{tournament.startdate | date: 'dd.MM.yyyy'}}</td>
+    <td>{{tournament.pivot_role}}</td>
+    <td>{{tournament.pivot_price_paid | currency:"€"}}</td>
+    <td>{{tournament.pivot_price_owed | currency:"€"}}</td>
+    <!--<td>{{tournament.pivot_price_paid - tournament.pivot_price_owed | currency:"€"}}</td>-->
+    <td data-monetary-amount="{{tournament.pivot_price_paid - tournament.pivot_price_owed}}€"></td>
+    <td class="text-center">
+        <button ng-click="editContact(tournament)" class="btn btn-info"><span class="glyphicon glyphicon-pencil"></span></button>
+    </td>
+    <td class="text-center">
+        <button ng-click="unreg(x.pivot_id, x.id)" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span></button>
+    </td>
+</script>
+
+<!--TEMPLATE FOR INLINE EDIT VIEW-->
+<script type="text/ng-template" id="edit">
+    <td class="text-center hidden-xs">{{tournament.id}}</td>
+    <td>
+        {{tournament.name}}
+    </td>
+    <td>{{tournament.startdate | date: 'dd.MM.yyyy'}}</td>
+    <td>{{tournament.pivot_role}}</td>
+    <td>
+        <input class="form-control" type="number" step="0.01" ng-model="selected.pivot_price_paid" />
+    </td>
+    <td>
+        <input class="form-control" type="number" step="0.01" ng-model="selected.pivot_price_owed" />
+    </td>
+    <td>{{selected.pivot_price_paid - selected.pivot_price_owed | currency:"€"}}</td>
+    <td>
+        <button class="btn btn-sm btn-success" ng-click="saveReg($index, tournament.pivot_id)" style="margin: 3px">Save</button>
+        <button class="btn btn-sm btn-danger" ng-click="reset()" style="margin: 3px">Cancel</button>
+    </td>
+</script>
