resolved currency issue
updated to new angular version .. check for bugs!!!

--- a/public/anmeldungen.html
+++ b/public/anmeldungen.html
@@ -17,7 +17,7 @@
 		<!--TOURNAMENT TABLE-->
 		<div class="col-md-12">
 
-			<table class="table table-hover table-overview table-responsive">
+			<table class="table table-hover table-responsive">
 				<thead>
 				<tr>
 					<!--<th></th>-->
@@ -46,7 +46,7 @@
 		<div id="users" class="col-md-12">
 
 			<h3>{{tournament.name}}</h3>
-			<table ng-show="showUsers" class="table table-hover table-overview table-responsive">
+			<table ng-show="showUsers" class="table table-hover table-responsive">
 				<thead>
 				<tr>
 					<th class="hidden-xs"><button class="btn btn-raised btn-info btn-sm" ng-click="sortUsers('id')">User ID</button></th>
