--- a/public/finances.html
+++ b/public/finances.html
@@ -17,7 +17,7 @@
         <!--USER TABLE-->
         <div class="col-md-12">
 
-            <table class="table table-hover table-overview table-responsive">
+            <table class="table table-hover table-responsive">
                 <thead>
                 <tr>
                     <!--<th></th>-->
@@ -61,7 +61,7 @@
         <div ng-show="showTournaments" class="col-md-12">
 
             <h3>{{user.vorname}}</h3>
-            <table class="table table-hover table-overview table-responsive">
+            <table class="table table-hover table-responsive">
                 <thead>
                 <tr>
                     <th class="hidden-xs"><button class="btn btn-raised btn-info btn-sm" ng-click="sortTournaments('id')">Tournament ID</button></th>
@@ -93,15 +93,11 @@
     </td>
     <td>{{tournament.startdate | date: 'dd.MM.yyyy'}}</td>
     <td>{{tournament.pivot_role}}</td>
-    <td>{{tournament.pivot_price_paid | currency:"€"}}</td>
-    <td>{{tournament.pivot_price_owed | currency:"€"}}</td>
-    <!--<td>{{tournament.pivot_price_paid - tournament.pivot_price_owed | currency:"€"}}</td>-->
-    <td data-monetary-amount="{{tournament.pivot_price_paid - tournament.pivot_price_owed}}€"></td>
+    <td>{{tournament.pivot_price_paid | currency:'€'}}</td>
+    <td>{{tournament.pivot_price_owed | currency:'€'}}</td>
+    <td class="currencySign" data-monetary-amount="{{tournament.pivot_price_paid - tournament.pivot_price_owed | currency:'€'}}"></td>
     <td class="text-center">
         <button ng-click="editContact(tournament)" class="btn btn-info"><span class="glyphicon glyphicon-pencil"></span></button>
-    </td>
-    <td class="text-center">
-        <button ng-click="unreg(x.pivot_id, x.id)" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span></button>
     </td>
 </script>
 
@@ -119,7 +115,7 @@
     <td>
         <input class="form-control" type="number" step="0.01" ng-model="selected.pivot_price_owed" />
     </td>
-    <td>{{selected.pivot_price_paid - selected.pivot_price_owed | currency:"€"}}</td>
+    <td class="currencySign" data-monetary-amount="{{selected.pivot_price_paid - selected.pivot_price_owed | currency:'€'}}"></td>
     <td>
         <button class="btn btn-sm btn-success" ng-click="saveReg($index, tournament.pivot_id)" style="margin: 3px">Save</button>
         <button class="btn btn-sm btn-danger" ng-click="reset()" style="margin: 3px">Cancel</button>
