added partners to success input

--- a/public/bugReport.html
+++ b/public/bugReport.html
@@ -19,7 +19,7 @@
                 <div class="form-group">
                     <label>Type</label>
                     <div class="input-group">
-                        <select class="form-control" style="height:auto;" ng-model="newBug.type" required>
+                        <select class="form-control" ng-model="newBug.type" required>
                             <option value=""></option>
                             <option value="UI/UX">Optic & Usability (UI/UX)</option>
                             <option value="Functionality">Functionality</option>
