--- a/public/signup.html
+++ b/public/signup.html
@@ -58,7 +58,7 @@
 						<label>Gender</label>
 						<div class="input-group">
 							<span class="input-group-addon"><i class="fa fa-circle"></i></span>
-							<select class="form-control" style="height:auto;" ng-model="reguser.gender">
+							<select class="form-control" ng-model="reguser.gender">
 								<option value=""></option>
 								<option value="f">female</option>
 								<option value="m">male</option>
