--- a/public/tournaments.html
+++ b/public/tournaments.html
@@ -202,7 +202,7 @@
                 <div class="col-sm-3">
                     <div class="form-group">
                         <label for="language">Sprache</label>
-                        <select id="language" class="form-control" style="height:auto;" ng-model="tournament.language">
+                        <select id="language" class="form-control" ng-model="tournament.language">
                             <option value=""></option>
                             <option value="de">deutsch</option>
                             <option value="en">englisch</option>
@@ -213,7 +213,7 @@
                 <div class="col-sm-3">
                     <div class="">
                         <label>Wert im BDU Ranking</label>
-                        <select class="form-control" style="height:auto;" ng-model="tournament.rankingvalue">
+                        <select class="form-control" ng-model="tournament.rankingvalue">
                             <option value=""></option>
                             <option value="2">2 - Einstiegsturnier</option>
                             <option value="3">3 - DDL Turniere (DDL-Mindestgröße = <12 Teams)</option>
@@ -283,7 +283,6 @@
             </button>
 
         </div>
-        <p>{{tournament.startdate}}</p>
     </div>
 
 </section>
