--- a/public/vorstand.html
+++ b/public/vorstand.html
@@ -109,7 +109,7 @@
 					<div class="col-sm-3">
 						<div class="form-group">
 							<label for="language">Sprache</label>
-							<select id="language" class="form-control" style="height:auto;" ng-model="newTournament.language">
+							<select id="language" class="form-control" ng-model="newTournament.language">
 								<option value=""></option>
 								<option value="de">deutsch</option>
 								<option value="en">englisch</option>
@@ -120,7 +120,7 @@
 					<div class="col-sm-3">
 						<div class="">
 							<label>Wert im BDU Ranking</label>
-							<select class="form-control" style="height:auto;" ng-model="newTournament.rankingvalue">
+							<select class="form-control" ng-model="newTournament.rankingvalue">
 								<option value=""></option>
 								<option value="2">2 - Einstiegsturnier</option>
 								<option value="3">3 - DDL Turniere (DDL-Mindestgröße = <12 Teams)</option>
