--- a/public/signup.html
+++ b/public/signup.html
@@ -66,8 +66,15 @@
 							</select>
 						</div>
 					</div>
+                    <div class="form-group">
+                        <label>Food Preference</label>
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-cutlery"></i></span>
+                            <input type="text" ng-model="reguser.food" placeholder="Veggie? Vegan? Allergies? Don't like tomatoes?" class="form-control" name="Food" id="Food">
+                        </div>
+                    </div>
 
-					<button type="submit" class="btn btn-raised btn-warning btn-lg">Signup</button>
+					<button type="submit" class="btn btn-raised btn-warning btn-lg" style="margin-top: 15px">Signup</button>
 
 				</fieldset>
 			</form>
@@ -75,7 +82,6 @@
 			<hr>
 
 			<p>Already have an account? <a href="/#">Login</a></p>
-			<!-- <p>Or go <a href="/">home</a>.</p> -->
 
 		</div>
 	</div>
